5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1692_1101.log
== TEST (2019-04-27 12:07:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == R and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(tipo == R and consumo <= 500):
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:08:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(tipo == R and consumo <= 500):
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:16:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "c" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- EXECUTION TIME:
0.116467
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:16:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "c" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:16:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "c" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:17:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "c" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:20:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:23:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",preco)
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:23:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:24:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:24:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- EXECUTION TIME:
0.145001
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:25:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- EXECUTION TIME:
0.116748
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:25:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:26:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:27:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:27:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:30:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and 0<= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(consumo < 0):
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:31:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and 0<= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(consumo < 0):
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- EXECUTION TIME:
0.144433
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:45:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and 0<= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(consumo < 0):
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 18:08:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <= 500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and 0<= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Valor total: R$",round(preco,2))
elif(consumo < 0):
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")
else:
	print("Entradas:",consumo,"kWh e tipo",tipo)
	print("Dados invalidos")





-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
